--- a/index.html
+++ b/index.html
@@ -5,37 +5,67 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="styles/base.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/styles.css">
   <title>Porto Auto Services</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="assets/logo.png" alt="Porto Auto Services"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#sobre">Sobre</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#servicos">Serviços</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contato">Contato</a>
-          </li>
-        </ul>
-      </div>
+  <header>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img src="assets/logo.png" alt="Porto Auto Services"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#sobre">Sobre</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#servicos">Serviços</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contato">Contato</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </div>
-  </nav>
-  <main>Main</main>
+  </header>
+  <main>
+    <section class="banner container-fluid">
+      <div class="container banner-container">
+        <div class="banner-container-content">
+          <p class="supertitle">Procurando serviços confiáveis?</p>
+          <h2 class="title">Melhor Mecânica no centro de Erechim RS</h2>
+          <p class="subtitle">Marque uma avaliação do seu veículo hoje mesmo com nosso formulário on-line</p>
+        </div>
+        <div class="banner-container-contact-anchor">
+          <div class="contact-phone">
+            <p class="text">Ligue agora</p>
+            <p class="phone">(54) 9 9999-9999</p>
+          </div>
+          <a class="contact-anchor" href="#contato">Marque uma avaliação</a>
+        </div>
+      </div>
+    </section>
+    <section>
+      sobre
+    </section>
+    <section>
+      serviços
+    </section>
+    <section>
+      contato
+    </section>
+  </main>
   <footer>Footer</footer>
 </body>
 
