feat: adds about section

--- a/index.html
+++ b/index.html
@@ -56,8 +56,17 @@
         </div>
       </div>
     </section>
-    <section>
-      sobre
+    <section id="sobre" class="section about-section container-fluid">
+      <div class="container about-section-container">
+        <h2 class="section-title underline-start">Vinte anos de experiência</h2>
+        <div class="about-section-content">
+          <div class="about-text">
+            <p>Há duas décadas, nossa mecânica tem sido um baluarte da excelência no setor automotivo. Com um legado de 20 anos de experiência e dedicação inabalável, construímos uma reputação sólida baseada na qualidade dos nosso serviços e no compromisso com a satisfação do cliente. Ao longo desse anos, temos nos mantido na vanguarda da indústria, adaptando-nos às mudanças tecnológicas e investindo constantemente na capacitação da nossa equipe.</p>
+            <p>Nossos 20 anos de atuação no mercado não são apenas um testemunho da nossa longevidade, mas também um símbolo da nossa consistência em superar as expectativas dos nossos clientes. Através de uma combinação de expertise técnica, atendimento personalizado e uma abordagem centrada no cliente, continuamos a ser a escolha preferida de muitos proprietários de veículos que buscam confiança e tranquilidade quando se trata de cuidar de seus automóveis.</p>
+          </div>
+          <img class="about-image" src="assets/sobre.png" alt="">
+        </div>
+      </div>
     </section>
     <section>
       serviços
