feat: adds services section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/styles.css">
   <title>Porto Auto Services</title>
@@ -61,15 +61,52 @@
         <h2 class="section-title underline-start">Vinte anos de experiência</h2>
         <div class="about-section-content">
           <div class="about-text">
-            <p>Há duas décadas, nossa mecânica tem sido um baluarte da excelência no setor automotivo. Com um legado de 20 anos de experiência e dedicação inabalável, construímos uma reputação sólida baseada na qualidade dos nosso serviços e no compromisso com a satisfação do cliente. Ao longo desse anos, temos nos mantido na vanguarda da indústria, adaptando-nos às mudanças tecnológicas e investindo constantemente na capacitação da nossa equipe.</p>
-            <p>Nossos 20 anos de atuação no mercado não são apenas um testemunho da nossa longevidade, mas também um símbolo da nossa consistência em superar as expectativas dos nossos clientes. Através de uma combinação de expertise técnica, atendimento personalizado e uma abordagem centrada no cliente, continuamos a ser a escolha preferida de muitos proprietários de veículos que buscam confiança e tranquilidade quando se trata de cuidar de seus automóveis.</p>
+            <p>Há duas décadas, nossa mecânica tem sido um baluarte da excelência no setor automotivo. Com um legado de
+              20 anos de experiência e dedicação inabalável, construímos uma reputação sólida baseada na qualidade dos
+              nosso serviços e no compromisso com a satisfação do cliente. Ao longo desse anos, temos nos mantido na
+              vanguarda da indústria, adaptando-nos às mudanças tecnológicas e investindo constantemente na capacitação
+              da nossa equipe.</p>
+            <p>Nossos 20 anos de atuação no mercado não são apenas um testemunho da nossa longevidade, mas também um
+              símbolo da nossa consistência em superar as expectativas dos nossos clientes. Através de uma combinação de
+              expertise técnica, atendimento personalizado e uma abordagem centrada no cliente, continuamos a ser a
+              escolha preferida de muitos proprietários de veículos que buscam confiança e tranquilidade quando se trata
+              de cuidar de seus automóveis.</p>
           </div>
           <img class="about-image" src="assets/sobre.png" alt="">
         </div>
       </div>
     </section>
-    <section>
-      serviços
+    <section id="servicos" class="section services-section container-fluid">
+      <div class="container services-section-container">
+        <h2 class="section-title underline-center services-title">Serviços</h2>
+        <div class="services-section-content">
+          <div class="services-text">
+            <p>Na nossa oficina mecânica, oferecemos uma gama completa de serviços para garantir o bom funcionamento do
+              seu veículo. Realizamos desde manutenções preventivas, como troca de óleo e filtros, até reparos mais
+              complexos em sistemas de transmissão e freios.</p>
+            <p>Nossa equipe altamente qualificada e experiente está pronta para atender às necessidades do seu carro,
+              proporcionando segurança e confiabilidade em cada serviço prestado.</p>
+          </div>
+          <div class="services-list" role="list">
+            <div class="services-item" role="listitem">
+              <img class="service-img" src="assets/service-1.jpg" alt="">
+              <p class="service-description">Reparação de freios</p>
+            </div>
+            <div class="services-item" role="listitem">
+              <img class="service-img" src="assets/service-2.jpg" alt="">
+              <p class="service-description">Verificação do motor</p>
+            </div>
+            <div class="services-item" role="listitem">
+              <img class="service-img" src="assets/service-3.jpg" alt="">
+              <p class="service-description">Reparação de suspensão</p>
+            </div>
+            <div class="services-item" role="listitem">
+              <img class="service-img" src="assets/service-4.jpg" alt="">
+              <p class="service-description">Reparo de transmissão</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section>
       contato
