feat: adds footer

--- a/index.html
+++ b/index.html
@@ -130,7 +130,26 @@
       </div>
     </section>
   </main>
-  <footer>Footer</footer>
+  <footer>
+    <div class="container footer-container">
+      <div class="address-info">
+        <h3 class="address-info-title">Entre em contato</h3>
+        <address>
+          Endereço: Rua Exemplo, 123 - Cidade - Estado<br>
+          Telefone: (00) 1234-5678<br>
+          E-mail: <a class="mail-link" href="mailto:exemplo@empresa.com">exemplo@empresa.com</a><br>
+        </address>
+      </div>
+      <div class="social-media">
+        <h3 class="social-media-title">Redes Sociais</h3>
+        <ul class="social-media-list">
+          <li class="social-media-item">Facebook</li>
+          <li class="social-media-item">Twitter</li>
+          <li class="social-media-item">Instagram</li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
